--- a/styles/global.css
+++ b/styles/global.css
@@ -59,14 +59,14 @@ h2 {
 }
 
 p {
-  /*font-size: 22px;*/
-  margin: 0; /* нужно прописать margin для article */
+  margin: 0;
 }
 
 img, svg {
   max-width: 100%;
   max-height: 100%;
   height: auto;
+  margin: 0;
 }
 
 button {
