--- a/styles/pagination/pagination.css
+++ b/styles/pagination/pagination.css
@@ -2,22 +2,22 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
+  margin: 0 0 147px 0;
 }
 
 .pagination__button {
   display: inline-block;
-  padding: 10px 15px;
+  padding: 8px 13px;
   margin: 0 5px;
-  border: 1px solid #ccc;
-  border-radius: 3px;
   text-decoration: none;
   color: #333;
+  font-size: 16px;
+  font-weight: 700;
 }
 
-.pagination__button:hover,
-.pagination__button:focus {
-  background-color: #eee;
+.pagination__link {
+  border-radius: 4px;
+  border: 2px solid #000000;
 }
 
 .pagination__button:hover svg path {
@@ -26,6 +26,8 @@
 
 .pagination__button--current {
   font-weight: bold;
+  color: rgba(54, 112, 199, 1);
+  border: 2px solid rgba(54, 112, 199, 1);
 }
 
 .pagination__button--disabled {
