adding mobile styles

--- a/styles/global.css
+++ b/styles/global.css
@@ -95,11 +95,17 @@ ul {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 814px) {
   body {
     padding: 0 34px;
   }
 }
+
+/*@media screen and (max-width: 768px) {*/
+/*  body {*/
+/*    padding: 0 34px;*/
+/*  }*/
+/*}*/
 
 @media screen and (max-width: 630px) {
   body {
