--- a/styles/preview/preview.css
+++ b/styles/preview/preview.css
@@ -85,3 +85,66 @@
   color: rgba(143, 143, 143, 1);
 }
 
+@media screen and (max-width: 1440px) {
+  .preview__title {
+    font-size: 26px;
+    line-height: 33px;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .preview__title {
+    font-size: 20px;
+    line-height: 26px;
+  }
+}
+
+@media screen and (max-width: 975px) {
+  #previews {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .preview__title {
+    font-size: 26px;
+    line-height: 33px;
+  }
+
+  .preview {
+    max-width: 100%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .preview__title {
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .preview__link {
+    grid-gap: 0 30px;
+  }
+
+  .preview__info {
+    grid-gap: 5px 0;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .preview__title {
+    font-size: 18px;
+    line-height: 20px;
+  }
+
+  .preview__link {
+    grid-gap: 0 10px;
+  }
+
+  .preview__link {
+    grid-template-columns: 110px 1fr;
+  }
+
+  .preview__date {
+    font-size: 14px;
+  }
+}
+
