--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,6 +14,7 @@
 @import "_grid-header.scss";
 @import "_grid-item-wrap.scss";
 @import "_header.scss";
+@import "_header-menu.scss";
 @import "_pagination.scss";
 @import "_preview.scss";
 @import "_footer.scss";
