creating min.css

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,20 +1,20 @@
-@import "_fonts.scss";
-@import "_var.scss";
-@import "_global.scss";
-@import "_account.scss";
-@import "_article.scss";
-@import "_article-content.scss";
-@import "_article-section.scss";
-@import "_banners.scss";
-@import "_breadcrumbs.scss";
-@import "_date.scss";
-@import "_description-ending.scss";
-@import "_form.scss";
-@import "_grid.scss";
-@import "_grid-header.scss";
-@import "_grid-item-wrap.scss";
-@import "_header.scss";
-@import "_header-menu.scss";
-@import "_pagination.scss";
-@import "_preview.scss";
-@import "_footer.scss";
+@import "components/_fonts.scss";
+@import "components/_var.scss";
+@import "components/_global.scss";
+@import "components/_account.scss";
+@import "components/_article.scss";
+@import "components/_article-content.scss";
+@import "components/_article-section.scss";
+@import "components/_banners.scss";
+@import "components/_breadcrumbs.scss";
+@import "components/_date.scss";
+@import "components/_description-ending.scss";
+@import "components/_form.scss";
+@import "components/_grid.scss";
+@import "components/_grid-header.scss";
+@import "components/_grid-item-wrap.scss";
+@import "components/_header.scss";
+@import "components/_header-menu.scss";
+@import "components/_pagination.scss";
+@import "components/_preview.scss";
+@import "components/_footer.scss";
