--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -62,7 +62,7 @@
     border-radius: 30px;
     width: 101px;
     height: 54px;
-    background-image: url("../../img/search.svg");
+    background-image: url("/ShopOnline/img/search.svg");
     background-repeat: no-repeat;
     background-size: auto;
     background-position: center center;
