--- a/scss/components/_fonts.scss
+++ b/scss/components/_fonts.scss
@@ -2,8 +2,8 @@
   @font-face {
     font-family: $font-family;
     src: local('#{$font-family}'), local('#{$font-family}-#{$font-style}'), local('#{$font-family} #{$font-style}'),
-    url('/fonts/#{$font-file}.woff2') format('woff2'),
-    url('/fonts/#{$font-file}.woff') format('woff');
+    url('/ShopOnline/fonts/#{$font-file}.woff2') format('woff2'),
+    url('/ShopOnline/fonts/#{$font-file}.woff') format('woff');
     font-weight: $font-weight;
     font-style: $font-style;
     font-display: swap;
